# trs-viewer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  plot.py  ttest.py
inc/: mainwindow.h  plot_widget.h  processing.h  snr.h  trs_file.h
src/: mainwindow.cpp  plot_widget.cpp  processing.cpp  snr.cpp
tests/: CMakeLists.txt  test_align.cpp  test_cpa.cpp  test_processing.cpp  test_snr.cpp  test_trs_file.cpp  test_ttest.cpp  test_xcorr.cpp
trs-viewer/: CMakeLists.txt  README.md  resources.qrc
trs-viewer/inc/: align.h  cpa.h  heatmap_widget.h  leakage_model.h  leakage_model_dialog.h  mainwindow.h  plot_widget.h  processing.h  trs_file.h  ttest.h  xcorr.h
trs-viewer/src/: align.cpp  cpa.cpp  heatmap_widget.cpp  heatmap_widget.h  leakage_model.cpp  leakage_model_dialog.cpp  main.cpp  mainwindow.cpp  plot_widget.cpp  plot_widget.h  processing.cpp  trs_file.cpp  ttest.cpp  ttest.h  xcorr.cpp  xcorr.h
